BILL Display Done and Bugs Fixed

--- a/public/views/billing/view.html
+++ b/public/views/billing/view.html
@@ -51,7 +51,8 @@
 			<td width="12.50%"><center>{{bill.status}}</center> </td>
 			<td width="12.50%">
 			<center>
-				<button class="btn waves-effect waves-light" style="background-color: #43a047; position: relative; bottom: 2px; width: 50px;" data-target="payNow"><i class="fa fa-inr"></i></button> 
+				<button class="btn waves-effect waves-light" ng-click="viewBill()" style="background-color: #43a047; position: relative; bottom: 2px; width: 50px;"><i class="fa fa-eye"></i></button> 
+				<button class="btn waves-effect waves-light" style="background-color: #43a047; position: relative; bottom: 2px; width: 50px;" data-target="payNow"><i class="fa fa-inr"></i></button> 				
 			</center> </td>
 			</tr>
 		</tbody>
