--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -13,7 +13,7 @@
 
 <nav>
   <div class="nav-wrapper" id="header">
-	<a href="#" ng-click="humburger()"><i class="material-icons" id="reorderBtn">reorder</i></a><a class="brand-logo"><img src="./assets/imgs/logo.png" id="qLogo"></a><span id="tt" style="position: relative; left:180px;">RENTALS &amp; DECORATIONS</span>
+	<a href="#"><i class="material-icons" id="reorderBtn">reorder</i></a><a class="brand-logo"><img src="./assets/imgs/logo.png" id="qLogo"></a><span id="tt" style="position: relative; left:180px;">RENTALS &amp; DECORATIONS</span>
 	<ul class="right hide-on-med-and-down">   
 	  <li id="refreshBtn"><a ng-click="ref()"><i class="material-icons">update</i></a></li>
 	  <li id="logoutBtn"><a ui-sref="logout"><i class="material-icons">input</i></a></li>
@@ -22,7 +22,7 @@
 </nav>
 </div>
 
-<ul id="slide-out" class="side-nav fixed expanded" ng-show="sideNavDisplayFinal" style="width:250px">
+<ul id="slide-out" class="side-nav fixed expanded" style="width:250px">
   <li><div class="user-view">
 	<i class="large material-icons" id="reorderBtn">perm_identity</i>
 	<span class="name" id="nameField">{{userName}}</span>
