Almost EveryThing is Over Automatic Stock Generation Is Completed Now Only a Few Bug Fixes And Code Cleanup on the front end

--- a/public/views/billing/new.html
+++ b/public/views/billing/new.html
@@ -128,7 +128,7 @@
 
     </div>
   </div>
-
+<!-- 
 <div id="saveBillConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4>ARE YOU SURE TO SAVE THIS ORDER &amp; BILL ?</h4>
@@ -159,7 +159,7 @@
 		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="no()"> NO </button></center>
 	</div>
 </div>
-
+ -->
 
 
 
@@ -273,7 +273,7 @@
 </div>
 
 
-<div id="lostItemConfirm" class="modal bottom-sheet">
+<!-- <div id="lostItemConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4><i class="fa fa-cubes" id="qtyIcon"></i> ENTER THE LOST QUANTITY FOR <b>{{item.name}}</b> 
   		&nbsp;&nbsp;<div class="input-field animated" id="quantity" style="display: inline-block;">
@@ -286,4 +286,4 @@
 		</form>
 		</h4></center>
 	</div>
-</div>
+</div> -->
