--- a/public/views/orders/new.html
+++ b/public/views/orders/new.html
@@ -36,34 +36,34 @@
 <h4 style="font-family: 'Montserrat', sans-serif;"> {{titleMsg}} <div class="animated swing" style="display: inline-block;">{{total}}</div></h4> 
   <div class="input-field animated" style="position: absolute; top:120px; right:65px; float: right; width:300px;" id="searchContainer">
   <i class="fa fa-search prefix" id="searchIcon" ng-mouseenter="expandSearch()"></i>
-    <input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-init="" ng-focus="searchFocus()" ng-blur="compressSearch()" ng-keyup="searchBlur()" id="search" style="width: 0px">
+	<input type="text"  placeholder="SEARCH HERE.." ng-model="search" ng-init="" ng-focus="searchFocus()" ng-blur="compressSearch()" ng-keyup="searchBlur()" id="search" style="width: 0px">
   </div> 
 
 <table class="table table-hover table-responsive list animated" id="custList">
   <thead>
   <!-- <tr> -->
-      <th width ="35%"><i class="fa fa-user-o" style="font-size: 15px"></i> NAME</th>
-      <th width ="25%"><i class="fa fa-phone" style="font-size: 15px"></i> CONTACT NUMBER</th>
-      <th width ="20%"><center><i class="fa fa-cube" style="font-size: 15px"></i> OUTSTANDING ORDERS</center></th>
-      <th width ="20%"><center><i class="fa fa-inr" style="font-size: 15px"></i> CREDIT</center></th>
+	  <th width ="35%"><i class="fa fa-user-o" style="font-size: 15px"></i> NAME</th>
+	  <th width ="25%"><i class="fa fa-phone" style="font-size: 15px"></i> CONTACT NUMBER</th>
+	  <th width ="20%"><center><i class="fa fa-cube" style="font-size: 15px"></i> OUTSTANDING ORDERS</center></th>
+	  <th width ="20%"><center><i class="fa fa-inr" style="font-size: 15px"></i> CREDIT</center></th>
   <!-- </tr> -->
   </thead>
 	<tr ng-repeat="customer in list | filter : search" ng-click="set(customer,$index)" id="row{{$index}}" height="48">
-    <td width="35%" title = "Name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.name}} </td>
-    <td width="25%" title = "Contact"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.contact}} </td>
-    <td width="20%" title = "Orders"> <center>{{customer.orders}}</center> </td>	
-    <td width="20%" title = "Credit"> <center>{{customer.credit}}</center> </td>
+	<td width="35%" title = "Name"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.name}} </td>
+	<td width="25%" title = "Contact"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{customer.contact}} </td>
+	<td width="20%" title = "Orders"> <center>{{customer.orders}}</center> </td>	
+	<td width="20%" title = "Credit"> <center>{{customer.credit}}</center> </td>
 	</tr>
 </table>
 
-<div id="orderConfirm" class="modal bottom-sheet">
+<!-- <div id="orderConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4>ARE YOU SURE TO ISSUE ORDER TO <b>{{customer.name}}</b> ?</h4></center>
 		<center><button class="btn waves-effect waves-light" style="background-color: #388E3C" ng-click="orderProceed()"> YES </button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="noOrder()"> NO </button></center>
 	</div>
-</div>
+</div> -->
 
 <div id="nextContent" class="hide animated">
 	
@@ -93,10 +93,10 @@
 			<i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp; RETURN ON &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" class="datepicker" pick-a-date="returnDate" id="returnDate" name="returnDate" style="width: 250px" required>
 		</div>
 		<div class="input-field">
-    		<i class="fa fa-connectdevelop"></i>&nbsp;&nbsp; EVENT PURPOSE &nbsp;&nbsp;&nbsp;&nbsp; <input type="text" maxlength="22" ng-model="evePurpose" ng-keyup="toUpper('evePurpose')" ng-init="" id="evePurpose" style="width: 250px; font-size: 19px">
+			<i class="fa fa-connectdevelop"></i>&nbsp;&nbsp; EVENT PURPOSE &nbsp;&nbsp;&nbsp;&nbsp; <input type="text" maxlength="22" ng-model="evePurpose" ng-keyup="toUpper('evePurpose')" ng-init="" id="evePurpose" style="width: 250px; font-size: 19px">
 		</div>
 		<div class="input-field">
-    		<i class="fa fa-map-marker"></i>&nbsp;&nbsp;&nbsp;&nbsp; EVENT LOCATION&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" maxlength="22" ng-model="eveLoxn" ng-keyup="toUpper('eveLoxn')" ng-init="" id="evePurpose" style="width: 250px; font-size: 19px">
+			<i class="fa fa-map-marker"></i>&nbsp;&nbsp;&nbsp;&nbsp; EVENT LOCATION&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" maxlength="22" ng-model="eveLoxn" ng-keyup="toUpper('eveLoxn')" ng-init="" id="evePurpose" style="width: 250px; font-size: 19px">
 		</div>			
 	</div>
 	<!-- <span style="position: relative; bottom:60px ; margin-left: 710px;"> -->
@@ -120,22 +120,22 @@
 <table class="table table-hover table-responsive list animated" id="orderedItemList" ng-show="orderedList.length > 0">
   <thead>
   <!-- <tr> -->
-      <th width ="20%"><i class="fa fa-barcode" style="font-size: 12px"></i> BARCODE</th>
-      <th width ="30%"><i class="fa fa-cube" style="font-size: 15px"></i> NAME</th>
-      <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
-      <th width ="12.50%"><center><i class="fa fa-cubes" style="font-size: 20px"></i> QUANTITY</center></th>
-      <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> TOTAL</center></th>
+	  <th width ="20%"><i class="fa fa-barcode" style="font-size: 12px"></i> BARCODE</th>
+	  <th width ="30%"><i class="fa fa-cube" style="font-size: 15px"></i> NAME</th>
+	  <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
+	  <th width ="12.50%"><center><i class="fa fa-cubes" style="font-size: 20px"></i> QUANTITY</center></th>
+	  <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> TOTAL</center></th>
   <!-- </tr> -->
   </thead>
   <tbody>
-    <tr ng-repeat="orderedItem in orderedList" class="animated fadeInLeft" height="48" id="item{{$index}}">
-    <td width="20%" title = "CODE"> {{orderedItem.barCode}} </td>
-    <td width="30%" title = "NAME" style="position:relative; left:10px">  {{orderedItem.name}} </td>
-    <td width="12.50%" title = "PRICE"> <center>{{orderedItem.price | currency:""}} ₹</center> </td>
-    <td width="12.50%" title = "TOTAL STOCK"> <center>{{orderedItem.qty}}</center> </td>
-    <td width="12.50%" title = "AVAILABLE"> <center>{{orderedItem.price*orderedItem.qty | currency:""}} ₹</center> </td>
-    <td width="12.50%" title = "AVAILABLE"> <center><button class="btn waves-effect waves-light" style="background-color: #d32f2f; position: relative; bottom: 2px" ng-click="delThisItem($index)"><i class="fa fa-trash-o"></i></button></center> </td>
-  	</tr>
+	<tr ng-repeat="orderedItem in orderedList" class="animated fadeInLeft" height="48" id="item{{$index}}">
+	<td width="20%" title = "CODE"> {{orderedItem.barCode}} </td>
+	<td width="30%" title = "NAME" style="position:relative; left:10px">  {{orderedItem.name}} </td>
+	<td width="12.50%" title = "PRICE"> <center>{{orderedItem.price | currency:""}} ₹</center> </td>
+	<td width="12.50%" title = "TOTAL STOCK"> <center>{{orderedItem.qty}}</center> </td>
+	<td width="12.50%" title = "AVAILABLE"> <center>{{orderedItem.price*orderedItem.qty | currency:""}} ₹</center> </td>
+	<td width="12.50%" title = "AVAILABLE"> <center><button class="btn waves-effect waves-light" style="background-color: #d32f2f; position: relative; bottom: 2px" ng-click="delThisItem($index)"><i class="fa fa-trash-o"></i></button></center> </td>
+	</tr>
   </tbody>
 </table>
 		<button ng-class="{'bs1': orderedList.length == 0 , 'bs2' : orderedList.length > 0}" class="waves-effect waves-light btn-large" id="backBtn" ng-model="backBtn" ng-click="back(2)" ><font size="4" ><i class="fa fa-chevron-left"></i> BACK</font></button>
@@ -149,39 +149,39 @@
 <table class="table table-hover table-responsive list animated" style="position: relative; bottom: 15px" id="itemList">
   <thead>
   <!-- <tr> -->
-      <th width ="20%"><i class="fa fa-barcode" style="font-size: 12px"></i> BARCODE</th>
-      <th width ="30%"><i class="fa fa-cube" style="font-size: 15px"></i> NAME</th>
-      <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
-      <th width ="12.50%"><center><i class="fa fa-stack-overflow" style="font-size: 20px"></i> TOTAL STOCK</center></th>
-      <th width ="12.50%"><center><i class="fa fa-check" style="font-size: 15px"></i> AVAILABLE NOW</center></th>
-      <th width ="12.50%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> AVAILABLE FOR ORDER</center></th>
+	  <th width ="20%"><i class="fa fa-barcode" style="font-size: 12px"></i> BARCODE</th>
+	  <th width ="30%"><i class="fa fa-cube" style="font-size: 15px"></i> NAME</th>
+	  <th width ="12.50%"><center><i class="fa fa-inr" style="font-size: 15px"></i> PRICE</center></th>
+	  <th width ="12.50%"><center><i class="fa fa-stack-overflow" style="font-size: 20px"></i> TOTAL STOCK</center></th>
+	  <th width ="12.50%"><center><i class="fa fa-check" style="font-size: 15px"></i> AVAILABLE NOW</center></th>
+	  <th width ="12.50%"><center><i class="fa fa-calendar" style="font-size: 15px"></i> AVAILABLE FOR ORDER</center></th>
   <!-- </tr> -->
   </thead>
   <tbody>
-    <tr ng-repeat="item in itemList | filter : search" ng-click="setItem(item,$index)" id="row2{{$index}}" height="48">
-    <td width="20%" id="{{item.barCode}}" title = "CODE"> {{item.barCode}} </td>
-    <td width="30%" id="{{item.barCode}}" title = "NAME" style="position:relative; left:10px">  {{item.name}} </td>
-    <td width="12.50%" id="{{item.barCode}}" title = "PRICE"> <center>{{item.price | currency:""}} ₹</center> </td>
-    <td width="12.50%" id="{{item.barCode}}" title = "TOTAL STOCK"> <center>{{item.totalStock}}</center> </td>
-    <td width="12.50%" id="{{item.barCode}}" title = "AVAILABLE"> <center>{{item.availableStock}}</center> </td>
-    <td width="12.50%" id="{{item.barCode}}" title = "RENTED STOCK"> <center> {{forecastAvailability[$index]}} </center> </td>
-  	</tr>
+	<tr ng-repeat="item in itemList | filter : search" ng-click="setItem(item,$index)" id="row2{{$index}}" height="48">
+	<td width="20%" id="{{item.barCode}}" title = "CODE"> {{item.barCode}} </td>
+	<td width="30%" id="{{item.barCode}}" title = "NAME" style="position:relative; left:10px">  {{item.name}} </td>
+	<td width="12.50%" id="{{item.barCode}}" title = "PRICE"> <center>{{item.price | currency:""}} ₹</center> </td>
+	<td width="12.50%" id="{{item.barCode}}" title = "TOTAL STOCK"> <center>{{item.totalStock}}</center> </td>
+	<td width="12.50%" id="{{item.barCode}}" title = "AVAILABLE"> <center>{{item.availableStock}}</center> </td>
+	<td width="12.50%" id="{{item.barCode}}" title = "RENTED STOCK"> <center> {{forecastAvailability[$index]}} </center> </td>
+	</tr>
   </tbody>
 </table>
 </div>
 
-<div id="orderItemConfirm" class="modal bottom-sheet">
+<!-- <div id="orderItemConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4><i class="fa fa-cubes" id="qtyIcon"></i> ENTER THE QUANTITY FOR <b>{{item.name}}</b> 
-  		&nbsp;&nbsp;<div class="input-field animated" id="quantity" style="display: inline-block;">
-    		<input type="number" ng-model="qty" ng-keydown="tap(enrollItem())" id="qtySearch" ng-init="qty=1" min="1" max="{{item.availableStock}}" style="font-size: 20px; width: 50px">
-  		</div> 
-  		<div id="maxVal" class="animated" style="display: inline-block;">(MAX : {{item.totalStock}} )</div>
-  		<form style="display: inline-block;">
+		&nbsp;&nbsp;<div class="input-field animated" id="quantity" style="display: inline-block;">
+			<input type="number" ng-model="qty" ng-keydown="tap(enrollItem())" id="qtySearch" ng-init="qty=1" min="1" max="{{item.availableStock}}" style="font-size: 20px; width: 50px">
+		</div> 
+		<div id="maxVal" class="animated" style="display: inline-block;">(MAX : {{item.totalStock}} )</div>
+		<form style="display: inline-block;">
 		<button class="btn waves-effect waves-light" style="background-color: #388E3C" type="submit" name="sbm" ng-click="enrollItem()"><i class="fa fa-check"></i></button>
 		&nbsp;&nbsp;&nbsp;&nbsp;
 		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="cancelItem()"><i class="fa fa-times"></i></button>
 		</form>
 		</h4></center>
 	</div>
-</div>
+</div> -->
