--- a/public/views/customers/view.html
+++ b/public/views/customers/view.html
@@ -60,14 +60,14 @@
 </center>
 </div>
 
-<div id="delConfirm" class="modal bottom-sheet">
+<!-- <div id="delConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4>ARE YOU SURE TO DELETE <b>{{customer.name}}</b> ?</h4></center>
 		<center><button class="btn waves-effect waves-light" style="background-color: #388E3C" ng-click="delete()"> YES </button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="noDel()"> NO </button></center>
 	</div>
-</div>
+</div> -->
 
 <script type="text/javascript">
 	$(document).ready(function(){
