--- a/jsreport/data/templates/TRX REPORT/content.html
+++ b/jsreport/data/templates/TRX REPORT/content.html
@@ -55,9 +55,9 @@
     </span>
     <span style="position:relative;float:right">
         <font face="Trebuchet MS">
-            <h3> CONTACT : +91-8714452213
-                <br>
-                <span style="float:right">+91-7012690872 </span>
+            <h3> CONTACT : 9846 516979
+            <br>
+            <span style="float:right"><span style="position:relative; right:6px">9656 722834 </span></span> </h3>
             </h3>
 
         </font>
