--- a/public/views/billing/view.html
+++ b/public/views/billing/view.html
@@ -59,7 +59,7 @@
 	</table>
 
 </div>
-<!-- 
+
 <div id="payNow" class="modal modal-fixed-footer">
 	<div class="modal-content">
 		<h3 ng-show = !t>Pay Now</h3> <h3 ng-show = t>One Time Settlement</h3>
@@ -126,4 +126,4 @@
 			<button style="position: relative; bottom: 5px; height:43px; background-color: #d32f2f" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="checkoutBtn" ng-click="no()"><font size="4"><span style="position: relative; bottom: 5px;"><i class="fa fa-times"></i> CLOSE </span></font></button>
 			<button style="position: relative; bottom: 5px; height:43px; background-color: #388e3c" class="waves-effect waves-light btn-large" id="checkoutBtn" ng-model="payNowBtn" ng-click="payNow()" ng-disabled="!check() || t"><font size="4" ><span style="position: relative; bottom: 5px;"> PAY NOW <i class="fa fa-inr"></i></span></font></button>	
 		</div>
-</div> -->
+</div>
