--- a/public/views/orders/new.html
+++ b/public/views/orders/new.html
@@ -56,14 +56,14 @@
 	</tr>
 </table>
 
-<!-- <div id="orderConfirm" class="modal bottom-sheet">
+<div id="orderConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4>ARE YOU SURE TO ISSUE ORDER TO <b>{{customer.name}}</b> ?</h4></center>
 		<center><button class="btn waves-effect waves-light" style="background-color: #388E3C" ng-click="orderProceed()"> YES </button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<button class="btn waves-effect waves-light" style="background-color: #d32f2f" ng-click="noOrder()"> NO </button></center>
 	</div>
-</div> -->
+</div>
 
 <div id="nextContent" class="hide animated">
 	
@@ -170,7 +170,7 @@
 </table>
 </div>
 
-<!-- <div id="orderItemConfirm" class="modal bottom-sheet">
+<div id="orderItemConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4><i class="fa fa-cubes" id="qtyIcon"></i> ENTER THE QUANTITY FOR <b>{{item.name}}</b> 
 		&nbsp;&nbsp;<div class="input-field animated" id="quantity" style="display: inline-block;">
@@ -184,4 +184,4 @@
 		</form>
 		</h4></center>
 	</div>
-</div> -->
+</div>
