--- a/public/views/stocks/view.html
+++ b/public/views/stocks/view.html
@@ -5,12 +5,12 @@
 	table{
 		font-family: 'Montserrat',sans-serif;
 	}
-/*	#contentsModal table :hover{
+	#contentsModal table :hover{
 		cursor: default;
 	}
 	#contentsModal h3{
 		font-family: 'Artifika', serif;
-	}*/
+	}
 	.ng-table-pager {
 	    display: none;
 	}	
@@ -50,7 +50,7 @@
   	</tr>
 </table>
 </div>
-<!-- 
+
 <div id="delConfirm" class="modal bottom-sheet">
 	<div class="modal-content">
 		<center><h4>ARE YOU SURE YOU WANT TO DELETE <b>{{item.name}}</b> ?</h4></center>
@@ -119,4 +119,4 @@
 		<button id="" class="waves-effect waves-light btn-large" ng-click="delConfirm()" style="height:40px;  background-color: #d32f2f ;"><span style="position: relative; bottom: 8px; font-size:15px"><i class="fa fa-trash"></i> DELETE </span></button>
 		</span>
 	</div>
-</div> -->
+</div>
