--- a/jsreport/data/templates/STK REPORT/content.html
+++ b/jsreport/data/templates/STK REPORT/content.html
@@ -39,9 +39,9 @@ table { margin: 0 auto; }
     </span>
     <span style="position:relative;float:right">
         <font face="Trebuchet MS">
-            <h3> CONTACT : +91-8714452213
+            <h3> CONTACT : 9846 516979
             <br>
-            <span style="float:right">+91-7012690872 </span> </h3>
+            <span style="float:right"><span style="position:relative; right:6px">9656 722834 </span></span> </h3>
             
         </font>        
     </span>
