--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,11 +1,20 @@
 <style type="text/css">
   #tt{
-	font-family: 'Dancing Script', sans-serif ;
-	font-size: 38px ;
+  position: relative; 
+  left:180px;
+  font-family: 'Dancing Script', sans-serif ;
+  font-size: 38px ;
   }
-  ul{
+  ul li a{
 	font-family: 'Raleway', sans-serif;
+  text-decoration: none;
   }
+    .cd1{
+      width: 250px;
+    }
+    .cd2{
+      width: 0px;
+    }
 </style>
 
 <div class="row">
@@ -13,16 +22,17 @@
 
 <nav>
   <div class="nav-wrapper" id="header">
-	<a href="#"><i class="material-icons" id="reorderBtn">reorder</i></a><a class="brand-logo"><img src="./assets/imgs/logo.png" id="qLogo"></a><span id="tt" style="position: relative; left:180px;">RENTALS &amp; DECORATIONS</span>
+	<a href="#" ng-click="humburger()"><i class="material-icons" id="reorderBtn">reorder</i></a><a class="brand-logo"><img src="./assets/imgs/logo.png" id="qLogo"></a><span id="tt">RENTALS &amp; DECORATIONS</span>
 	<ul class="right hide-on-med-and-down">   
-	  <li id="refreshBtn"><a ng-click="ref()"><i class="material-icons">update</i></a></li>
+	  <li id="refreshBtn"><a ng-click="ref()" style="text-decoration: none"><i class="material-icons">update</i></a></li>
 	  <li id="logoutBtn"><a ui-sref="logout"><i class="material-icons">input</i></a></li>
 	</ul>
   </div>
 </nav>
 </div>
 
-<ul id="slide-out" class="side-nav fixed expanded" style="width:250px">
+<ul id="slide-out" class="side-nav fixed expanded" ng-class="{'cd1' : showSideNavFinal , 'cd2' : !showSideNavFinal }">
+<!-- <ul id="slide-out" class="side-nav fixed expanded" style="width:250px" ng-show="showSideNavFinal"> -->
   <li><div class="user-view">
 	<i class="large material-icons" id="reorderBtn">perm_identity</i>
 	<span class="name" id="nameField">{{userName}}</span>
@@ -30,7 +40,6 @@
   </div></li>
   <li><div class="divider"></div></li>
   <br>
-  <!-- <li><a class="subheader" id="dashField">Dashboard</a></li> -->
   <li><a ui-sref="" class="dropdown-button" data-activates='custDropDown'><i class="material-icons">supervisor_account</i>CUSTOMERS<i class="material-icons" id="arrow">keyboard_arrow_down</i></a></li>
 
   <li><a ui-sref="" class="dropdown-button" data-activates='stockDropDown'><i class="material-icons">dns</i>STOCKS
@@ -48,27 +57,27 @@
 </ul>
 
   <ul id='custDropDown' class='dropdown-content'>
-	<li><a ui-sref="new_customer"><i class="material-icons">person_add</i>New Customer</a></li>
-	<li><a ui-sref="view_customer"><i class="fa fa-users"></i>Customers Central</a></li>
+	<li ng-click="hideSideNav()"><a ui-sref="new_customer"><i class="material-icons">person_add</i>New Customer</a></li>
+	<li ng-click="hideSideNav()"><a ui-sref="view_customer"><i class="fa fa-users"></i>Customers Central</a></li>
   </ul>
 
   <ul id='stockDropDown' class='dropdown-content'>
-	<li><a ui-sref="new_item"><i class="material-icons">add</i>New Item</a></li>
-	<li><a ui-sref="view_stock"><i class="fa fa-cubes"></i>Stocks Central</a></li>
+	<li ng-click="hideSideNav()"><a ui-sref="new_item"><i class="material-icons">add</i>New Item</a></li>
+	<li ng-click="hideSideNav()"><a ui-sref="view_stock"><i class="fa fa-cubes"></i>Stocks Central</a></li>
   </ul>  
 
   <ul id='billDropDown' class='dropdown-content'>
-	<li><a ui-sref="new_bill"><i class="material-icons">note_add</i>New Bill</a></li>
-	<li><a ui-sref="view_bill"><i class="fa fa-money" style="position: relative; left:4px; font-size: 20px"></i>Billing Central</a></li>
+	<!-- <li ng-click="hideSideNav()"><a ui-sref="new_bill"><i class="material-icons">note_add</i>New Bill</a></li> -->
+	<li ng-click="hideSideNav()"><a ui-sref="view_bill"><i class="fa fa-money" style="position: relative; left:4px; font-size: 20px"></i>Billing Central</a></li>
   </ul>  
 
   <ul id='orderDropDown' class='dropdown-content'>
-	<li><a ui-sref="new_order"><i class="material-icons">add_shopping_cart</i>New Order</a></li>
-	<li><a ui-sref="view_order"><i class="fa fa-shopping-bag" style="position: relative; left:4px; font-size: 20px"></i>Orders Central</a></li>
+	<li ng-click="hideSideNav()"><a ui-sref="new_order"><i class="material-icons">add_shopping_cart</i>New Order</a></li>
+	<li ng-click="hideSideNav()"><a ui-sref="view_order"><i class="fa fa-shopping-bag" style="position: relative; left:4px; font-size: 20px"></i>Orders Central</a></li>
   </ul> 
 
   <ul id='reportDropDown' class='dropdown-content'>
-	<li><a ui-sref="report_central"><i class="fa fa-file-code-o" style="position: relative; left:4px; font-size: 20px"></i>Reports Central</a></li>
+	<li ng-click="hideSideNav()"><a ui-sref="report_central"><i class="fa fa-file-code-o" style="position: relative; left:4px; font-size: 20px"></i>Reports Central</a></li>
   </ul> 
 
 </div>
@@ -79,17 +88,5 @@
 		belowOrigin : true
 	  }
 	);
-    $('#reorderBtn').click(function (){
-    		checkWidth()
-	})
-/*	$('.dropdown-content').click(function(){
-		checkWidth()
-		$('#slide-out').removeClass('expanded')
-		$('#slide-out').addClass('shrunk')
-		$('#slide-out').animate({
-			'width' : '0',
-		})
-		tr1()
-	})*/
   })
 </script>
