Added Files For Refund...Not Modified Existing Functionaltities

--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -73,6 +73,7 @@
   <ul id='billDropDown' class='dropdown-content'>
 	<!-- <li ng-click="hideSideNav()"><a ui-sref="new_bill"><i class="material-icons">note_add</i>New Bill</a></li> -->
 	<li ng-click="hideSideNav()"><a ui-sref="view_bill"><i class="fa fa-money" style="position: relative; left:4px; font-size: 20px"></i>Billing Central</a></li>
+	<li ng-click="hideSideNav()"><a ui-sref="view_refunds"><i class="fa fa-exchange" style="position: relative; left:4px; font-size: 20px"></i>Refunds Central</a></li>
   </ul>  
 
   <ul id='orderDropDown' class='dropdown-content'>
